2007-03-30  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- Cleanup some timeouts and make sure GSourceFuncs return the right
			values

2007-03-30  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (real_act_stage6_post_ip_start): add static arp mapping for MPP anycast
			IP address to the anycast MAC address

2007-03-29  Dan Williams  <dcbw@redhat.com>

	* src/NetworkManager.c
		- (fixup_hostname): set unique hostname to work around avahi bug
			where it dies when a hostname conflict is encountered
			*HACK*, goes away when avahi gets fixed

2007-03-27  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- Implement mesh "discovery" and a two-pass attempt to connect to
			the mesh before giving up
		- Ensure that GSources are valid before using them

2007-03-27  Dan Williams  <dcbw@redhat.com>

	* src/NetworkManagerSystem.c
		- Don't use invalid netlink handles; return error instead

2007-03-27  Dan Williams  <dcbw@redhat.com>

	* include/NetworkManager.h
		- Add a "post-ip" stage in activation that happens after an IP address
			has been configured.  Mesh bits will look for a mesh portal here,
			or it could be used to log in to a Wi-Fi portal or something.

	* src/nm-device.[ch]
		- Add the "post-ip" activation stage

	* src/nm-device-802-11-mesh-olpc.[ch]
		- Implement mesh portal (MPP) detection
		- Random channel on interface startup
		- Fix scanning inhibition & interaction between ethernet and mesh device
		- get/set_80211_freq() -> get/set_80211_channel()
		- Kill avahi-autoipd instead of telling it to terminate, because it's
			UNBIND/STOP signal comes in way to late.  Sort of a hack.

2007-03-22  Dan Williams  <dcbw@redhat.com>

	There needs to be some coordination between the mesh device and the
	normal 802.11 device.  The normal device shouldn't scan when the mesh
	device is active, and the mesh device shouldn't be searching for mesh